--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -124,9 +124,7 @@ a:visited,
 a:focus {
   outline: none;
 }
-a,span,i{
-  display: inline-block;
-}
+
 ol,
 ul,
 li {
