--- a/src/scss/tc-theme/_layout.scss
+++ b/src/scss/tc-theme/_layout.scss
@@ -9,12 +9,6 @@
   }
 }
 
-a,
-span,
-em,
-i {
-  display: inline-block;
-}
 
 .main {
   min-height: 480px;
